--- a/CSS5/Index.html
+++ b/CSS5/Index.html
@@ -60,7 +60,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="2"><center>Solde</center></td>
+                <td colspan="2"><center>Solde</center></td> <!--colspan="2" inséré dans <td> indique que l'on veut que cette case fasse la taille des "2" premieres colonnes-->
                 <td colspan="2"><center>575,40</center></td>
             </tr>
         </tfoot>
